--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 
 [dependencies]
 bitflags = "1.2"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 emoji = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
