--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ readme = "README.md"
 edition = "2021"
 
 [dependencies]
-bitflags = "1.2"
+bitflags = { version = "2.1" }
 chrono = { version = "0.4", features = ["serde"] }
 emoji = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
-sqlx = { version = "0.5", optional = true }
+sqlx = { version = "0.6", optional = true }
 
-#[features]
-#runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
+[dev-dependencies]
+serde_test = "1.0"
